removed jvm args